--- a/src/App.css
+++ b/src/App.css
@@ -15,32 +15,33 @@
   display: block;
   position: relative;
   padding: 1em;
-  padding-right: 65px;
+  padding-right: 40px;
   border-bottom: 1px solid #ccc;
 }
 .chat .text {
   display: inline-block;
+  line-height: 1.3em;
 }
 .chat .id {
-  background: #e9e9e9;
-  color: #fff;
+  /*background: #e9e9e9;*/
+  display: inline-block;
+  padding-right: 5px;
+  color: #ccc;/*
   padding: 0px 4px;
   border-radius: 1px;
   position: absolute;
   right: 10px;
-  top: 10px;
+  top: 10px;*/
 }
 .chat .children-count {
   background: #009eda;
   color: #fff;
-  padding-top: 4px;
-  border-radius: 100px;
+  border-radius: 20px;
   box-sizing: border-box;
   position: absolute;
-  top: 6px;
-  right: 35px;
-  width: 25px;
-  height: 25px;
+  top: 12px;
+  right: 10px;
+  padding: 3px 5px;
   text-align: center;
 }
 .chat .controls {
@@ -52,6 +53,9 @@
   margin-top: 1rem;
   transition: max-height 0.3s linear;
   max-height: 0;
+}
+.chat.opened {
+  background: #daf5ff;
 }
 .chat.opened .controls {
   max-height: 40px;
@@ -67,7 +71,7 @@
   /*border-right: none;*/
 }
 .chat .controls > *:hover {
-  background: #eee;
+  background: #b4ebff;
 }
 @media screen and (max-width: 600px) {
   .chat .controls > * span {
@@ -78,6 +82,7 @@
 .input-container {
   box-shadow: 0 0 30px -10px #000;
   position: relative;
+  border-top: 1px solid green;
 }
 
 textarea {
@@ -90,6 +95,10 @@ textarea {
   padding: 0.5em 1em;
   display: inline-block;
   vertical-align: middle;
+}
+textarea:focus {
+  outline: none;
+  box-shadow: 0 0 20px -5px green inset;
 }
 
 .send {
